--- a/SkillSnap/SkillSnap.Client/Pages/SkillTags.razor
+++ b/SkillSnap/SkillSnap.Client/Pages/SkillTags.razor
@@ -1,4 +1,6 @@
-﻿@using SkillSnap.Client.Models
+﻿@page "/skill-tags"
+
+@using SkillSnap.Client.Models
 @using SkillSnap.Client.Services
 
 @inject SkillService SkillService
